--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/AdamMescher/contact-manager-cli/issues"
   },
-  "homepage": "https://github.com/AdamMescher/contact-manager-cli#readme"
+  "homepage": "https://github.com/AdamMescher/contact-manager-cli#readme",
+  "dependencies": {
+    "commander": "^2.13.0",
+    "inquirer": "^5.0.1",
+    "mongoose": "^5.0.2"
+  }
 }
